--- a/src/components/QuestionPage.css
+++ b/src/components/QuestionPage.css
@@ -2,7 +2,7 @@
     height: 60px;
     background-color: rgb(249, 167, 80);
     margin: 0px;
-    padding:auto;
+   
     display: flex;
     justify-content: space-between;
 }
@@ -10,6 +10,7 @@
     display: flex;
 }
 .ques-box{
+    margin-top: 20px;
     background-color: rgb(229, 224, 224);
     width: 210vh;
     border: .2px solid;
@@ -37,14 +38,27 @@
 .back-button{
     background-color: bisque;
     margin-left: 20px;
+    transition: 0.3s;
 }
 .next-button{
     background-color: bisque;
+    transition: 0.3s;
 }
 .submit-button{
     background-color: bisque;
+    transition: 0.3s;
 }
 .button-container{
     display: flex;
     justify-content: space-between;
+    padding: 30px;;
+}
+.next-button:hover{
+    background-color: chocolate;
+}
+.back-button:hover{
+    background-color: chocolate;
+}
+.submit-button:hover{
+    background-color: rgb(182, 220, 29);
 }
